# Django-Ecommerce-Api

./: .gitignore  pyproject.toml  requirements.txt
core/: settings.py  urls.py
customer/: admin.py  authentications.py  managers.py  models.py  serializers.py  urls.py  views.py
customer/migrations/: 0001_initial.py  0002_customerprofile.py  0003_alter_customerprofile_image_url.py  0004_alter_customerprofile_image_url.py
customer/utils/: emails.py
docs/: project_schema.html
product/: admin.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_categories_parent.py  0003_alter_products_slug.py
templates/email/: welcome_email.html
